# services/dialogue-hub/doc/swagger.json
@@ -92,18 +92,6 @@
         "produces": [
           "application/json"
         ],
-        "parameters": [
-          {
-            "name": "errorRate",
-            "in": "query",
-            "type": "number",
-            "format": "float",
-            "min": 0,
-            "max": 1,
-            "description": "Error injection rate between 0 and 1",
-            "required": false
-          }
-        ],
         "requestBody": {
           "content": {
             "application/json": {
