# services/time-warp/src/app/multiplayer/demo/OpenRouterController.java
@@ -4,8 +4,6 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.Parameter;
-import io.swagger.v3.oas.annotations.enums.ParameterIn;
 import org.springframework.http.*;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.client.RestTemplate;
@@ -34,14 +32,6 @@ public class OpenRouterController {
   })
   // @ResponseBody
   public ResponseEntity<?> sendMessageToOpenRouter(
-    @Parameter(
-      name = "errorRate",
-      in = ParameterIn.QUERY,
-      description = "Probability of random error injection, between 0 and 1",
-      required = false,
-      schema = @Schema(type = "number", format = "double", minimum = "0", maximum = "1")
-    )
-    @RequestParam(name = "errorRate", required = false) Double errorRate,
     @RequestBody MessageRequest request
   ) {
     String contextId = request.getContextId();
