# services/timegate/src/routes/dialogue-hub/post-message.ts
@@ -3,16 +3,14 @@ import { DialogueHubService } from '../../services'
 
 export default async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const { 
+    const {
       message,
       contextId
     } = req.body as { message: string, contextId?: string }
-    const errorRate = req.query.errorRate as number | undefined
 
     const reply = await DialogueHubService.postOpenRouterMessage(
       message,
-      contextId,
-      errorRate
+      contextId
     )
 
     return res.status(200).json(reply)
