# services/timegate/src/routes/minds-of-time/list-persons.ts
@@ -3,8 +3,7 @@ import { MindsOfTimeService } from '../../services'
 
 export default async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const errorRate = req.query.errorRate as number | undefined
-    const prominentPersons = await MindsOfTimeService.fetchProminentPersons(errorRate)
+    const prominentPersons = await MindsOfTimeService.fetchProminentPersons()
 
     return res.status(200).json(prominentPersons)
   } catch (err) {
