# services/timegate/src/routes/vault-of-time/list-events.ts
@@ -3,8 +3,7 @@ import { VaultOfTimeService } from '../../services'
 
 export default async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const errorRate = req.query.errorRate as number | undefined
-    const historicalEvents = await VaultOfTimeService.fetchHistoricalEvents(errorRate)
+    const historicalEvents = await VaultOfTimeService.fetchHistoricalEvents()
 
     return res.status(200).json(historicalEvents)
   } catch (err) {
